--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Rock, Paper, Scissors!</title>
-		<script src="script.js"></script>
+		<script src="script.js" defer></script>
+		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="title">Rock, Paper or Sicssors</div>
+			<div class="player-selection">
+				<span class="choice" data-choice="rock">✊</span>
+				<span class="choice" data-choice="paper">🖐️</span>
+				<span class="choice" data-choice="scissors">✌️</span>
+			</div>
+			<div class="computer-selection"></div>
+		</div>
+	</body>
 </html>
