feat: added logic to play 5 rounds, display score, announce winner and then reset.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 				<span class="choice" data-choice="paper">🖐️</span>
 				<span class="choice" data-choice="scissors">✌️</span>
 			</div>
-			<div class="computer-selection"></div>
+			<div class="result"></div>
+			<div class="score"></div>
 		</div>
 	</body>
 </html>
